Fixed alignment/size of the images of search items, they are now consitant with each item

--- a/css/indexmobile.css
+++ b/css/indexmobile.css
@@ -225,6 +225,8 @@ textarea:focus, input:focus, button:focus { outline: none; }
 {
 	align-items: stretch;
 	margin-top: -1.4%;
+	width: 65%;
+	max-width: 65%;
 }
 #mobile .item aside
 {
@@ -236,8 +238,8 @@ textarea:focus, input:focus, button:focus { outline: none; }
 {
 	margin-right: 12px;
 	align-items: stretch;
-	width: 600px;
-	max-width: 600px;
+	width: 35%;
+	max-width: 35%;
 	overflow: hidden;
 	border-radius: 10px;
 	background-size: cover;
